# OptimallyEnclosedHorse

./: .gitignore  CMakeLists.txt  README.md  TODO.md  enclose.py  mini-puzzle.js
include/: reader.hpp  solver.hpp  writer.hpp
maps/: test.in
reference/: README.md  enclose_original.py  play.js
src/: main.cpp  reader.cpp  solver.cpp  writer.cpp
